# lab-manager

./: .gitignore  DEPLOY.md  README.md  package-lock.json  pyproject.toml
client/: eslint.config.js  package-lock.json  package.json  start-vite.sh  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/helpers/: cache.ts  utils.ts
client/src/pages/: App.scss  App.tsx
client/src/styles/: _shared.scss  _variables.scss
extras/: uwsgi-production.ini  uwsgi.ini
server/: asgi.py  requirements-dev.txt  requirements.txt  settings.py  urls.py  wsgi.py
server/accounts/: admin.py  email_i18n.py  models.py  urls.py  verification.py  views.py
server/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_user_profile_image.py  0003_user_role.py  0004_rename_date_of_birth_user_birthdate_and_more.py  0004_user_position_user_researcher_order_and_more.py  0005_user_is_approved_alter_user_role.py  0005_user_is_former_member.py  0006_user_bio.py  0007_remove_user_storage_root.py  0008_user_roles.py  0009_position_user_room.py  0011_invitation.py  (+3 more)
server/config/: admin.py  apps.py  settings.py  urls.py  utils.py
server/content/: models.py  reports.py  urls.py  views.py
server/contents/: models.py
server/core/: context_processors.py  forms.py  models.py  urls.py  views.py
server/oauth/: models.py  urls.py  views.py
server/server/: settings.py  urls.py  views.py
server/sitewide/: apps.py  decorators.py  guids.py  middleware.py
server/staticfiles/: index.html
server/tasks/: jobs.py
server/thumbs/: models.py
(+129 files in other folders)
