[project]
name = "lab-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "hashids>=1.3.1",
    "openpyxl>=3.1.0",
    "pillow>=12.1.0",
    "psycopg[binary]>=3.3.2",
    "pyjwt>=2.10.1",
    "python-decouple>=3.8",
    "reportlab>=4.0",
    "ujson>=5.11.0",
    "uwsgi>=2.0.31",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
]
